--- a/src/components/CreateTodoButton/CreateTodoButton.css
+++ b/src/components/CreateTodoButton/CreateTodoButton.css
@@ -23,3 +23,6 @@
   .CreateTodoButton:hover {
     transform: rotate(224deg);
   }
+  /* .CreateTodoButton:active{
+    transform: rotate(180deg) 
+  } */
